<resources>
    <string name="app_name">ssPeach</string>
    <string name="todo">TODO</string>
    <string name="spit_it_out">Spit it out...</string>
    <string name="speach2">speach2</string>
    <string name="string_speach2" />
    <string name="textview">TextView</string>
    <string name="speach">sPeach</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_account">Forgot Account?</string>
    <string name="editText">Name</string>
    <string name="edit_e_mail">E-mail</string>
    <string name="edit_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="code">Code</string>
    <string name="facebook_app_id">1156564884501887</string>
    <string name="fb_login_protocol_scheme">fb251866835468248</string>
    <string name="skip">SKIP</string>
    <string name="tab1">Home</string>
    <string name="tab2">Friends</string>
    <string name="tab3">AddFriend</string>
    <string name="tab4">Chats</string>
</resources>
