<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="46dp"
        android:text="@string/speach"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="70sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="221dp"
        android:ems="10"
        android:hint="@string/edit_e_mail"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="151dp"
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="225dp"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        tools:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        tools:fontFamily="serif-monospace" />

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textColor="#eeeeee"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />


    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="@drawable/rounded_button_face"
        android:text="@string/login"
        android:textColor="#eeeeee"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace"
        tools:text="Facebook Register" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"
        android:text="@string/register"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />
</RelativeLayout>