<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="50dp"
        android:text="@string/speach"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="70sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:text="@string/login"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:textSize="25sp"
        android:inputType="textPersonName"
        android:text="@string/email"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="231dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textSize="25sp"
        tools:fontFamily="serif-monospace" />

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="149dp"
        android:background="@drawable/rounded_button_face"
        android:text="@string/login"
        android:textColor="#eeeeee"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />


    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:background="@drawable/rounded_button_face"
        android:text="@string/login"
        android:textColor="#eeeeee"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace"
        tools:text="Login w/Facebook" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/forgot_account"
        android:textStyle="bold"
        tools:fontFamily="serif-monospace" />
</RelativeLayout>